<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="product_sn">Product SN</string>
    <string name="product_sn_default">"set in misc"</string>
    <string name="urovo">"urovo"</string>
    <string name="urovo_settings">Support Scanners</string>
    <string name="scan_type">Scan Type</string>
    <string name="scan_type_summary">[ <xliff:g id="scan_type_entries">%1$s</xliff:g> ]</string>
    <string name="urovo_settings_title">Scanners</string>
    <string name="set_scanner_manager">Scanner</string>
    <string name="scanner">Scanner</string>
    <string name="scanner_control">Scanner Control</string>
    <string name="scanner_screen_on">"Screen off scanner is working"</string>
    <string name="scanner_separator">"Separator"</string>
    <string name="scanner_separator_summary">"GS1、DataMatrix Separator"</string>
    <string name="scanner_on">Turn on scanner power</string>
    <string name="scanner_off">Turn off scanner power</string>
    <string name="scanner_keyboard_mode">Keyboard mode</string>
    <string name="scanner_virtual_button_output">Virtual key output</string>
    <string name="scanner_virtual_button_summary">Suspension button</string>
    <string name="scanner_virtual_button_title">Suspension button on/off</string>
    <string name="scanner_output_mode">Keyboard output mode</string>
    <string name="scanner_keyboard_output">"Keyboard output"</string>
    <string name="scanner_keyboard_output_summary">output the barcode into the focused edit box</string>
    <string name="scanner_trigger_mode">"Triggering Modes"</string>
    <string name="scanner_trigger_mode_summary">"The laser is always on and decoding"</string>
    <string name="scanner_beep">Sounds</string>
    <string name="scanner_beep_summary">Play sound when the scan is successful</string>
    <string name="scanner_vibrate">Vibrate</string>
    <string name="scanner_vibrate_summary">Vibrate when the scan is successful</string>
    <string name="scanner_wedge_intent_title">Intent Output</string>
    <string name="scanner_wedge_intent_summary">Data be sent to an application in the form of an implicit Intent</string>
    <string name="scanner_intent_stringlabel">Intent string extra</string>
    <string name="scanner_intent_action">Intent action</string>
    <string name="scanner_enter">Additional enter key</string>
    <string name="keyevent_enter_delay">Key event delay</string>
    <string name="output_data_delay">Characters delay</string>
    <string name="scanner_enter_summary">Additional enter key after the scan results</string>
    <string name="scanner_keyboard_action_character">Action key character</string>
    <string name="scanner_out_editortext_mode">Editor text mode</string>
    <string name="scanner_lock">Scan key</string>
    <string name="scanner_lock_on">Enable Scan key</string>
    <string name="scanner_lock_off">Disable Scan key</string>
    <string name="scanner_app_on">Enable Scan App</string>
    <string name="scanner_app_off">Disable Scan App</string>
    <string name="scanner_app">Scan App</string>
    <string name="scanner_reset_def">Reset Configuration</string>
    <string name="scanner_reset_def_summary">Reset the decoding subsystem configuration </string>
    <string name="scanner_reset_def_alert">Reset the decoding subsystem configuration?</string>
    <string name="scanner_reset_progress">"Reset......"</string>
    <string name="scanner_update_progress">"Update......"</string>
    <string name="scanner_toast">Scanner reset finished!</string>
    <string name="scanner_type_unknown">unknown scan type!</string>
    <string name="scanner_keyboard_type_title">Keyboard type</string>
    <string-array name="scanner_keyboard_type_values" translatable="false">
        
        <item>0</item>
        
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="scanner_keyboard_type_entries">
        <item>Physical keyboard</item>
        <item>Soft keyboard</item>
        <item>Always Physical keyboard</item>
        <item>Always Soft keyboard</item>
    </string-array>
    <string name="title_device_sn">SN</string>
    <string name="summary_device_sn">unknown sn code</string>
    <string name="title_device_32550">SE</string>
    <string name="summary_device_32550">Unknown</string>
    <string name="phonemode_summary">Scan Screen</string>
    <string name="phonemode_title">Phone Mode</string>
    <string name="phonemode_scan_key">Phone Mode</string>
    <string name="phonemode_scan_key_summary">Scan Screen</string>
    <string name="scanner_green_spot">Good read spot</string>
    <string name="scanner_green_spot_on">Green spot with good read</string>
    <string name="scanner_green_led">Good Led spot</string>
    <string name="scanner_green_led_on">Green Led with good read</string>
    <string name="scanner_green_spot_off">Disable green spot with good read</string>
    <string name="scanner_intent_mode">Intent mode</string>
    <string name="scanner_intent_mode_on">The captured data to be sent to an application in the form of an implicit Intent</string>
    <string name="scanner_intent_mode_off">Disable the captured data to be sent to an application in the form of an implicit Intent</string>
    <string name="scanner_action_save">Permanent Save</string>
    <string name="scanner_commit">Enable Config</string>
    <string name="scanner_decode_engine">Decoder configure </string>
    <string name="scanner_barcode_param">Decoder parameters</string>
    <string name="scanner_barcode_param_summary">Decoder parameters configure</string>
    <string name="scanner_decoders_enable">All decoders enable</string>
    <string name="scanner_decoders_enable_summary">Allow all barcode symbologies</string>
    <string name="scanner_keystroke_output_category">Keystroke Output</string>
    <string name="scanner_intent_output_category">Intent Output</string>
    <string name="scanner_intent_atcion">Intent action</string>
    <string name="scanner_intent_delivery">Intent delivery</string>
    <string name="scanner_reader_codeid_type">Code Id Type</string>
    <string name="scanner_reader_params">Reader Params</string>
    <string name="decoder_type_code39">Code39</string>
    <string name="decoder_type_code39_enable_check">Enable checksum</string>
    <string name="decoder_type_code39_send_check">Report checksum</string>
    <string name="decoder_type_code39_full_ascii">Full ASCII conversion</string>
    <string name="scanner_formatting">Label formatting</string>
    <string name="lable_ocr_symbology">OCR symbology</string>
    <string name="import_config_keys">Import Profile</string>
    <string name="export_config_keys">Export Profile</string>
    <string name="scanner_symbology_code11">Code 11</string>
    <string name="scanner_symbology_chinese_25">Chinese 25</string>
    <string name="scanner_symbology_upc_e1">UPC-E1</string>
    <string name="scanner_symbology">Symbology Settings</string>
    <string name="scanner_symbology_aztec">Aztec</string>
    <string name="scanner_symbology_codabar">Codabar</string>
    <string name="scanner_symbology_code128">Code 128</string>
    <string name="scanner_symbology_gs1_128">GS1-128</string>
    <string name="scanner_symbology_code39">Code 39</string>
    <string name="scanner_symbology_code93">Code 93</string>
    <string name="scanner_symbology_composite_cc_ab">Composite CC-A/B</string>
    <string name="scanner_symbology_composite_cc_c">Composite CC-C</string>
    <string name="scanner_symbology_composite_39">Composite TLC-39</string>
    <string name="scanner_symbology_hanxin">Han Xin</string>
    <string name="scanner_symbology_Datamatrix">Datamatrix</string>
    <string name="scanner_symbology_ean13">EAN-13</string>
    <string name="scanner_symbology_ean8">EAN-8</string>
    <string name="scanner_symbology_gs1_databar14">GS1 DataBar-14</string>
    <string name="scanner_symbology_gs1_databar_expanded">GS1 DataBar Expanded</string>
    <string name="scanner_symbology_gs1_databar_limited">GS1 DataBar Limited</string>
    <string name="scanner_symbology_interleaved_25">Interleaved 2 of 5</string>
    <string name="scanner_symbology_matrix_25">Matrix 2 of 5</string>
    <string name="scanner_symbology_maxicode">Maxicode</string>
    <string name="scanner_symbology_micropdf417">MicroPDF417</string>
    <string name="scanner_symbology_MSI">MSI</string>
    <string name="scanner_symbology_code32">Code 32</string>
    <string name="scanner_symbology_pdf417">PDF417</string>
    <string name="scanner_symbology_postal">Postal codes</string>
    <string name="scanner_symbology_qrcode">QR Code</string>
    <string name="scanner_symbology_micro_qrcode">Micro QR Code</string>
    <string name="scanner_symbology_discrete_25">Discrete 2 of 5</string>
    <string name="scanner_symbology_trioptic">Trioptic</string>
    <string name="scanner_symbology_upc_a">UPC-A</string>
    <string name="scanner_symbology_upc_e">UPC-E</string>
    <string name="scanner_symbology_upc_ena_extensions">UPC/EAN Extensions</string>
    <string name="scanner_dpm_decoding">DPM decoding</string>
    <string name="scanner_trigger_reading">Other Settings</string>
    <string name="scanner_coding_format">Coding format</string>
    <string name="scanner_symbology_dotcode">DotCode</string>
    <string name="n6603_multiple_decode_config">Continuous Decode Config</string>
    <string name="n6603_multiple_decode_mode">Continuous scan mode </string>
    <string name="n6603_multiple_decode_count">MultiRead count</string>
    <string name="n6603_multiple_decode_count_sum">Sets the maximum number(1~100 times) of multiple barcodes to read</string>
    <string name="n6603_multiple_decode_timeout">Time out(50~60000 ms) allow duplicate barcode </string>
    <string name="n6603_multiple_decode_timeout_sum">This option is ignored if scan mode always allow duplicate.</string>
    <string name="n6603_multiple_decode_interval">Interval time(0~5000 ms) allow continuous scan </string>
    <string name="n6603_multiple_decode_interval_sum">0</string>
    <string name="scanner_multiple_decode">Basic Multibarcode params</string>
    <string name="scanner_multiple_decode_sum">Set up Multibarcode specific parameters</string>
    <string name="scanner_multiple_decode_mode">Basic Multibarcode</string>
    <string name="scanner_multiple_decode_count">Number of barcodes per scan</string>
    <string name="scanner_multiple_full_read_mode">Full Read Mode</string>
    <string name="scanner_multiple_full_read_mode_sum">Only output when at least the number of bar codes set in Bar Codes to Read are decoded</string>
    <string name="scanner_multiple_decode_separator">Barcode Separator</string>
    <string name="scanhandle_toggle_title">Scan Handle</string>
    <string name="scanhandle_toggle_summary_enable">Enable Scan Handle</string>
    <string name="scanhandle_toggle_summary_disable">Disable Scan Handle</string>
    <string name="wired_scan">Wired scan</string>
    <string name="contiuns">continuous</string>
    <string name="exposure">Exposure control</string>
    <string name="lighting">lighting</string>
    <string name="logMode">log Mode</string>
    <string name="aimerControl">Aimer control</string>
    <string name="chooseCameraId">Camera Id</string>
    <string name="saveBmp">Save Bmp</string>
    <string name="symbology">Symbology</string>
    <string name="yto_sixlen_off">There is no limit to the length of the output bar code.</string>
    <string name="yto_sixlen_on">Limited length of output bar code</string>
    <string name="yto_sixlen">Bar Code Length Limitation</string>
    <string name="min_code_len">Minimum Output Barcode Length</string>
    <string name="scanner_keyboard_copy">"Clipboard"</string>
    <string name="scanner_udi_format">UDI Data Formatting</string>
    <string name="webjump_switch_title">Website recognition and jump</string>
</resources>